4gewinnt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vier-gewinnt-site
  labels:
    app: vier-gewinnt-site
spec:
  selector:
    matchLabels:
      app: vier-gewinnt-site
  template:
    metadata:
      labels:
        app: vier-gewinnt-site
    spec:
      containers:
      - name: vier-gewinnt
        image: johannes33/4-gewinnt:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            ephemeral-storage: "2Gi"
          limits:
            ephemeral-storage: "4Gi"
