4gewinnt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vier-gewinnt-site-service
spec:
  selector:
    app: vier-gewinnt-site
  ports:
    - protocol: TCP
      port: 80
      targetport: 3000
