4gewinnt/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vier-gewinnt-site-ingress
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/4gewinnt`)
    kind: Rule
    services:
    - name: vier-gewinnt-site-service
      port: 80
    middlewares:
      - name: vier-gewinnt-stripprefix
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: vier-gewinnt-stripprefix
spec:
  contentType:
    autoDetect: false
  stripPrefix:
    prefixes:
      - /4gewinnt
